# llm-burst

./: .gitignore  .mcp.json  CLAUDE.md  LLMBurstLauncher.swift  README.md  create_applescript_launchers.sh  debug_activate.py  eslint.config.js  llm-burst-km.sh  mypy.ini  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup_chrome_profile.sh  test_end_to_end.sh  test_extension_direct.py  test_extension_manual.py  test_extension_simple.py  test_injection.py  test_remediation.py  tsconfig.json  tsconfig.playwright.json  uv
.github/workflows/: claude.yml  test.yml
chrome_ext/: README.md  background.js  content.js  get_launcher_url.sh  init.js  launcher.html  manifest.json  options.html  options.js  popup-new.js  popup.css  popup.html  popup.js  ui-final.js  ui-new.js  ui-redesigned.js  ui.js
chrome_ext/content/: router.js
chrome_ext/styles/: base.css  components.css  launcher.css  popup.css  providers-inline.css
docs/: grok-fix-summary.md  implementation-analysis.md  implementation-fixes-plan.md  implementation_review.md  specs.md  stage-2-completion.md  stage-3-completion.md  stage-4-completion.md  stage-5-completion.md  stage-6-completion.md  troubleshooting.md
docs/tmp/: ci_fix_2025-08-03.md  verify-claude-submit-plan.md  verify-grok-submit-plan.md
llm_burst/: __init__.py  __main__.py  auto_namer.py  browser.py  chrome_bootstrap.py  chrome_utils.py  cli.py  cli_click.py  constants.py  layout.py  layout_manual.py  providers.py  rectangle.py  state.py  tab_groups.py
llm_burst/providers/: __init__.py  (+4 more)
scripts/: launch-chrome-llmburst.sh
tests/: claude-injector.spec.ts  conftest.py  gemini-injector.spec.ts  test_activate.py  test_activate_tabs.py  test_arrange.py  test_auto_namer.py  test_auto_naming.py  test_browser.py  test_cli_click.py  test_dialog_keyboard.py  test_extension_integration.py  test_followup.py  test_grok_direct.py  test_grok_fixed.py  test_grok_js_injection.py  test_grok_minimal.py  test_grok_submit_debug.py  test_grok_submit_simple.py  test_grok_two_step.py  test_grok_wrapped.py  test_inject_options.py  test_submission_chatgpt.py  test_submission_claude.py  test_submission_gemini.py  test_submission_grok.py  test_tab_groups.py  test_toggle_group.py
types/: global.d.ts
(+24 files in other folders)
