[project]
name = "llm-burst"
version = "0.1.0"
description = "Tool for orchestrating multiple AI chat sessions simultaneously"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "click>=8.1.0",
    "google-generativeai>=0.8.0",
    "pydantic>=2.5.0",
    "rich>=13.5.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyperclip>=1.8.0",
]

[project.scripts]
llm-burst = "llm_burst.cli_click:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.2.1",
    "pytest-playwright>=0.4.0",
]

[tool.hatch.build]
# Ensure the swiftDialog wrapper script is shipped with both the sdist and wheel
include = [
    "bin/swift_prompt.sh",
]

[tool.hatch.build.targets.wheel]
packages = ["llm_burst"]
